cabal-version:      3.0
name:               spike
version:            0.0.0
synopsis:           Throwaway spike validating the keiro read-model API (EP-8).
description:
    Validates the typed ReadModel q r wrapper, the three consistency
    modes (Strong / Eventual / PositionWait), and the position-wait
    helper from docs/research/12-read-model-query-api-and-lifecycle.md.
    Three scenarios: inline projection (strong consistency), async
    projection plus position-wait (eventual + read-after-write), and
    position-wait timeout (failure mode).
license:            BSD-3-Clause
author:             Nadeem Bitar
maintainer:         nadeem@gmail.com
copyright:          2026 Nadeem Bitar
build-type:         Simple
tested-with:        GHC == 9.12.*

common shared
    default-language:   GHC2024
    default-extensions: BlockArguments
                        DataKinds
                        DeriveAnyClass
                        DerivingStrategies
                        DuplicateRecordFields
                        GADTs
                        OverloadedLabels
                        OverloadedRecordDot
                        OverloadedStrings
                        PolyKinds
                        QualifiedDo
                        TemplateHaskell
                        TypeFamilies
                        UndecidableInstances
    ghc-options:        -Wall -Wcompat -Widentities
                        -Wincomplete-record-updates -Wincomplete-uni-patterns
                        -Wpartial-fields -Wredundant-constraints

library
    import:             shared
    hs-source-dirs:     src
    exposed-modules:    Spike.Codec
                        Spike.Command
                        Spike.Counter
                        Spike.EventStream
                        Spike.Projection
                        Spike.ReadModel
                        Spike.Retry
    build-depends:      aeson            >= 2.1   && < 2.3,
                        async            >= 2.2,
                        base             ^>= 4.21,
                        bytestring       >= 0.11,
                        contravariant    >= 1.5,
                        effectful        >= 2.4,
                        effectful-core   >= 2.4,
                        hasql            >= 1.10,
                        hasql-pool       >= 1.2,
                        hasql-transaction >= 1.0,
                        keiki,
                        kiroku-store,
                        stm,
                        streamly-core    >= 0.3,
                        text             >= 2.0,
                        time             >= 1.12,
                        uuid             >= 1.3,
                        vector           >= 0.13

executable read-model-spike
    import:             shared
    hs-source-dirs:     app
    main-is:            Main.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      aeson,
                        async            >= 2.2,
                        base,
                        bytestring,
                        effectful,
                        effectful-core,
                        ephemeral-pg     >= 0.2,
                        hasql            >= 1.10,
                        hasql-pool       >= 1.2,
                        hasql-transaction >= 1.0,
                        keiki,
                        kiroku-store,
                        spike,
                        stm,
                        streamly-core    >= 0.3,
                        text,
                        time,
                        uuid,
                        vector
